[package]
name = "fosscopetoolkit-cli"
description = "为开源观察贡献者设计的工具箱（命令行工具版）"
version = "0.1.0-dev"

repository = "https://github.com/FOSScope/Toolkit"
license = "AGPL-3.0"
authors = [
    "FOSSCope <fosscope@fosscope.org>",
    "FOSSCope Contributors"
]

edition = "2021"
readme = "README.md"

[dependencies]
fosscopetoolkit-core = { workspace = true }
tokio = { version = "1", features = ["full"] } # Async Runtime
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1.0.117" # JSON Serialization
octocrab = "0.38.0" # GitHub API client
