[package]
name = "fosscopetoolkit-core"
description = "为开源观察贡献者设计的工具箱"
version = "0.1.0-dev"

repository = "https://github.com/FOSScope/Toolkit"
license = "AGPL-3.0"
authors = [
    "FOSSCope <fosscope@fosscope.org>",
    "FOSSCope Contributors"
]

edition = "2021"
readme = "README.md"

[dependencies]
git2 = "0.19.0" # Git
octocrab = "0.38.0" # GitHub API
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
mdka = "1.2.7" # HTML to Markdown

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
