[package]
name = "fosscopetoolkit-core"
description = "为开源观察贡献者设计的工具箱"
version = "0.1.0-dev"

repository = "https://github.com/FOSScope/Toolkit"
license = "AGPL-3.0"
authors = [
    "FOSSCope <fosscope@fosscope.org>",
    "FOSSCope Contributors"
]

edition = "2021"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async Runtime
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1.0.117" # JSON Serialization
regex = "1.10.5" # Regular Expression
reqwest = { version = "0.12", features = ["json"] } # HTTP Client
octocrab = "0.38.0" # GitHub API
mdka = "1.2.7" # HTML to Markdown

[dev-dependencies]
wiremock = "0.6.0"
