[package]
name = "fosscopetoolkit-core"
description = "为开源观察贡献者设计的工具箱"
version = "0.1.0-dev"

repository = "https://github.com/FOSScope/Toolkit"
license = "AGPL-3.0"
authors = [
    "FOSSCope <fosscope@fosscope.org>",
    "FOSSCope Contributors"
]

edition = "2021"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async Runtime
serde = { version = "1", features = ["derive"] } # Serialization
serde_json = "1.0.117" # JSON Serialization
toml = "0.8.14" # TOML Serialization
regex = "1.10.5" # Regular Expression
url = "2.5.2" # URL Parsing
reqwest = { version = "0.12", features = ["json"] } # HTTP Client
octocrab = "0.38.0" # GitHub API
html2md = { workspace = true } # HTML to Markdown
#libhtmlfilter = "0.1.2" # HTML Filter
libhtmlfilter = { git = "https://github.com/FOSScope/libhtmlfilter.git", rev = "e403113e901ae3cd422c86ab7ca6602e3ba78ab8" } # HTML Filter
openai_api_rust = "0.1.9" # OpenAI API
handlebars = "5.1.2" # Template Engine

[dev-dependencies]
wiremock = "0.6.0"
